crates/memscribe-testkit/tests/snapshots/events__gemini__v1__no_commitment_marker.snap
---
source: crates/memscribe-testkit/tests/golden.rs
expression: events
---
[
  {
    "schema_version": 1,
    "source": "gemini",
    "session_id": "g-nomarker-0001",
    "seq": 0,
    "event_id": "b491fb245e8b756ef8349d16223411a08529d53ad664e8faa7930d35c70a8df4",
    "parent_id": null,
    "timestamp": "1970-01-01T00:00:00Z",
    "project": {
      "cwd": "/home/dev/widgets",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "session_start",
      "cwd": "/home/dev/widgets",
      "git": {
        "sha": "e5e5e5e5e5",
        "branch": "main"
      },
      "model": "gemini-2.5-pro",
      "tool_version": "0.4.1"
    },
    "provenance": {
      "file": "fixtures/gemini/v1/no_commitment_marker.jsonl",
      "byte_offset": 0,
      "line_no": 1
    }
  },
  {
    "schema_version": 1,
    "source": "gemini",
    "session_id": "g-nomarker-0001",
    "seq": 1,
    "event_id": "msg-nm-01",
    "parent_id": null,
    "timestamp": "2026-06-22T17:00:00Z",
    "project": {
      "cwd": "/home/dev/widgets",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "user_turn",
      "text": "Thanks, this looks good to me.",
      "parts": []
    },
    "provenance": {
      "file": "fixtures/gemini/v1/no_commitment_marker.jsonl",
      "byte_offset": 185,
      "line_no": 2
    }
  },
  {
    "schema_version": 1,
    "source": "gemini",
    "session_id": "g-nomarker-0001",
    "seq": 2,
    "event_id": "msg-nm-02",
    "parent_id": null,
    "timestamp": "2026-06-22T17:00:02Z",
    "project": {
      "cwd": "/home/dev/widgets",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "assistant_turn",
      "text": "Glad it works. I'll tidy the trailing whitespace in the widget while I'm here.",
      "thinking": "A small cleanup edit with no governing decision turn.",
      "model": null,
      "usage": {
        "input_tokens": 70,
        "output_tokens": 38,
        "cache_read_tokens": null,
        "cache_creation_tokens": null
      },
      "parts": []
    },
    "provenance": {
      "file": "fixtures/gemini/v1/no_commitment_marker.jsonl",
      "byte_offset": 297,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "gemini",
    "session_id": "g-nomarker-0001",
    "seq": 3,
    "event_id": "call-nm-tidy:call",
    "parent_id": "msg-nm-02",
    "timestamp": "2026-06-22T17:00:02Z",
    "project": {
      "cwd": "/home/dev/widgets",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_call",
      "call_id": "call-nm-tidy",
      "name": "replace",
      "args": {
        "path": "src/widget.rs"
      }
    },
    "provenance": {
      "file": "fixtures/gemini/v1/no_commitment_marker.jsonl",
      "byte_offset": 297,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "gemini",
    "session_id": "g-nomarker-0001",
    "seq": 4,
    "event_id": "call-nm-tidy:result",
    "parent_id": "msg-nm-02",
    "timestamp": "2026-06-22T17:00:02Z",
    "project": {
      "cwd": "/home/dev/widgets",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "tool_result",
      "call_id": "call-nm-tidy",
      "ok": true,
      "output": {
        "fileName": "src/widget.rs",
        "originalContent": "fn render() { }  \n",
        "newContent": "fn render() {}\n",
        "fileDiff": "@@ -1 +1 @@\n-fn render() { }  \n+fn render() {}\n",
        "diffStat": {
          "added": 1,
          "removed": 1
        }
      }
    },
    "provenance": {
      "file": "fixtures/gemini/v1/no_commitment_marker.jsonl",
      "byte_offset": 297,
      "line_no": 3
    }
  },
  {
    "schema_version": 1,
    "source": "gemini",
    "session_id": "g-nomarker-0001",
    "seq": 5,
    "event_id": "call-nm-tidy:edit",
    "parent_id": "msg-nm-02",
    "timestamp": "2026-06-22T17:00:02Z",
    "project": {
      "cwd": "/home/dev/widgets",
      "repo_root": null,
      "git": {
        "sha": "e5e5e5e5e5",
        "branch": "main"
      }
    },
    "kind": {
      "event": "file_edit",
      "call_id": "call-nm-tidy",
      "diff": {
        "path": "src/widget.rs",
        "old": "fn render() { }  \n",
        "new": "fn render() {}\n",
        "unified": "@@ -1 +1 @@\n-fn render() { }  \n+fn render() {}\n",
        "added_lines": 1,
        "removed_lines": 1
      }
    },
    "provenance": {
      "file": "fixtures/gemini/v1/no_commitment_marker.jsonl",
      "byte_offset": 297,
      "line_no": 3
    }
  }
]
